--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -34,7 +34,18 @@ billing_project <- "provided by your instructor"
 
 ## Start RStudio
 
-Note that, in order to use RStudio, you must have access to a Terra Workspace with permission to compute (i.e. you must be a "Writer" or "Owner" of the Workspace).
+``{`r, include=FALSE}
+AnVIL_module_audience <- "student"
+```
+
+``{`r, include=FALSE}
+# prevent "object not found" errors
+if (!exists("AnVIL_module_audience")) {
+  AnVIL_module_audience <- NULL
+}
+```
+
+`r if( !(AnVIL_module_audience == "student") ) {"Note that, in order to use RStudio, you must have access to a Terra Workspace with permission to compute (i.e. you must be a "Writer" or "Owner" of the Workspace)."}`
 
 1. Click on the name of your Workspace. You should be routed to a link that looks like: `https://anvil.terra.bio/#workspaces/<billing-project>/<workspace-name>`.
 
