--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -51,7 +51,7 @@ if (!exists("rstudio_startup_script")) {
 }
 ```
 
-`r if( !(AnVIL_module_audience == "student") ) {"Note that, in order to use RStudio, you must have access to a Terra Workspace with permission to compute (i.e. you must be a "Writer" or "Owner" of the Workspace)."}`
+`r if( !(AnVIL_module_audience == "student") ) {'Note that, in order to use RStudio, you must have access to a Terra Workspace with permission to compute (i.e. you must be a "Writer" or "Owner" of the Workspace).'}`
 
 1. Open Terra - use a web browser to go to [`anvil.terra.bio`](https://anvil.terra.bio/)
 
