style swirl as code

--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -164,14 +164,14 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1ioYY0n3CcrP934WR
 *Estimated time: 20 min*
 
 1. Open RStudio.
-1. In the R console window, type the following commands to load the swirl package:
+1. In the R console window, type the following commands to load the `swirl` package:
 
     ```
     library(swirl)
     swirl()
     ```
 
-1. Install the course “**R Programming: The basics of programming in R**”, by following the instructions provided by swirl.
+1. Install the course “**R Programming: The basics of programming in R**”, by following the instructions provided by `swirl`.
     a. Enter your name.
     a. Press `ENTER`.
     a. Enter `1`, `2`, or `3`.
@@ -179,23 +179,23 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1ioYY0n3CcrP934WR
 1. Complete your first lesson.
     a. Select “**R Programming**”.
     a. Select “**Basic Building Blocks**”, by entering `1` ( i.e. the corresponding lesson number ).
-    a. Follow the instructions provided by swirl to complete your first lesson.
-    a. At the end, when swirl asks if you would like to receive Coursera credit, select “No”.
+    a. Follow the instructions provided by `swirl` to complete your first lesson.
+    a. At the end, when `swirl` asks if you would like to receive Coursera credit, select “No”.
 
 
 ## Complete additional `swirl` lessons
 
 *Estimated time: 80 min*
 
-1. Complete additional swirl lessons. 
+1. Complete additional `swirl` lessons. 
     a. Select “**R Programming**”
     a. Compete each of the following lessons:
         - **4: Vectors**
         - **5: Missing_Values**
         - **6: Subsetting_Vectors**
         - **12: Looking_at_Data**
-1. Once you have completed all the lessons listed above, exit swirl.
-    a. To exit swirl, type `bye()` in the R console, press `ESC` on your keyboard, or enter `0` in response to the swirl course menu prompt.
+1. Once you have completed all the lessons listed above, exit `swirl`.
+    a. To exit `swirl`, type `bye()` in the R console, press `ESC` on your keyboard, or enter `0` in response to the `swirl` course menu prompt.
 
 # Project: Explore dataframe
 
