--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -81,8 +81,8 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcH
 ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_35")
     ```
     
-```{r, results='as-is', echo=all( is.null(c(rstudio_docker_image, rstudio_startup_script)))
-"1. Note that, in order to use RStudio, you must have access to a Terra Workspace with permission to compute (i.e. you must be a "Writer" or "Owner" of the Workspace)."
+```{r, results='as-is', eval=all( is.null(c(rstudio_docker_image, rstudio_startup_script)))
+1. Note that, in order to use RStudio, you must have access to a Terra Workspace with permission to compute (i.e. you must be a "Writer" or "Owner" of the Workspace).
 ```
 
     ```{r, echo=FALSE, eval=all( is.null(c(rstudio_docker_image, rstudio_startup_script))), fig.alt='Screenshot of the RStudio Cloud Environment dialogue box. The cost to run the environment is highlighted.'}
