--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -75,25 +75,203 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcH
 ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_18")
     ```
 
-1. You will see some details about the cloud environment, and a list of costs because it costs a small amount of money to use cloud computing.
+1. You will see some details about the default RStudio cloud environment, and a list of costs because it costs a small amount of money to use cloud computing.
 
     ```{r, echo=FALSE, fig.alt='Screenshot of the RStudio Cloud Environment dialogue box. The cost to run the environment is highlighted.'}
 ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_35")
     ```
-    
-```{echo=FALSE, results='asis', eval=all( is.null(c(rstudio_docker_image, rstudio_startup_script)))}
-1. Note that, in order to use RStudio, you must have access to a Terra Workspace with permission to compute (i.e. you must be a "Writer" or "Owner" of the Workspace).
+-----
+```{r, include=FALSE}
+AnVIL_module_settings <- list(
+  audience = "student",
+  docker_image = "test docker",
+  startup_script = "test startup script"
+)
+
+# audience: 
+#   "general" provides advice on choosing settings (this is the default)
+#   "student" tells the reader what settings to choose
 ```
 
-    ```{r, echo=FALSE, eval=all( is.null(c(rstudio_docker_image, rstudio_startup_script))), fig.alt='Screenshot of the RStudio Cloud Environment dialogue box. The cost to run the environment is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_35")
+
+1. You will see some details about the cloud environment, and a list of costs because it costs a small amount of money to use cloud computing.
+
+    ```{r, echo=FALSE, fig.alt='Screenshot of the RStudio Cloud Environment dialogue box. The cost to run the environment is highlighted.'}
+hist(mtcars$disp)
     ```
 
-1. Click on the first drop down menu to see what other software configurations are available.
+```{r, include=FALSE}
+# settings for instructions about using the default RStudio configuration
 
-    ```{r, echo=FALSE, fig.alt='Screenshot of the cloud environment popout menu. The first dropdown menu for options, the Application configuration menu, is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1eypYLLqD11-NwHLs4adGpcuSB07dYEJfAaALSMvgzqw/edit#slide=id.gdde5ec9a4d_1_11")
+# default settings
+AnVIL_module_settings$include <- TRUE
+AnVIL_module_settings$text <- '1. If you are uncertain about what you need, the default configuration is a reasonable, cost-conservative choice.  It is fairly easy to increase your compute resources later, if needed, but harder to scale down. Click the “Create” button.'
+
+
+# for students
+if (AnVIL_module_settings$audience == "student") {
+  
+  # if there are no custom settings, include this slide
+  if (all( is.null(c(AnVIL_module_settings$docker_image,
+                    AnVIL_module_settings$startup_script)) )) {
+    AnVIL_module_settings$include <- TRUE
+    AnVIL_module_settings$text <- '1. Click the "CREATE" button.'
+  }
+  # if there *are* custom settings, then exclude this slide
+  else {
+    AnVIL_module_settings$include <- FALSE
+  }
+}
+```
+
+```{r, echo=FALSE, results='asis', eval=AnVIL_module_settings$include}
+cat(AnVIL_module_settings$text)
+```
+
+    ```{r, echo=FALSE, eval=AnVIL_module_settings$include}
+     hist(mtcars$cyl)
     ```
+
+```{r, include=FALSE}
+# settings for instructions about opening the RStudio custom configuration menu
+
+# default settings
+AnVIL_module_settings$include <- TRUE
+AnVIL_module_settings$text <- '1. Otherwise, click “CUSTOMIZE” to modify the environment for your needs.'
+
+
+# for students
+if (AnVIL_module_settings$audience == "student") {
+  
+  # if there are no custom settings, exclude this slide
+  if (all( is.null(c(AnVIL_module_settings$docker_image,
+                    AnVIL_module_settings$startup_script)) )) {
+    AnVIL_module_settings$include <- FALSE
+  }
+  # if there *are* custom settings, include this slide
+  else {
+    AnVIL_module_settings$include <- TRUE
+    AnVIL_module_settings$text <- '1. Click "CUSTOMIZE".'
+  }
+}
+```
+
+```{r, echo=FALSE, results='asis', eval=AnVIL_module_settings$include}
+cat(AnVIL_module_settings$text)
+```
+
+    ```{r, echo=FALSE, eval=AnVIL_module_settings$include}
+     hist(mtcars$cyl)
+    ```
+
+```{r, include=FALSE}
+# settings for instructions about using a custom docker image
+
+# default settings
+AnVIL_module_settings$include <- FALSE
+AnVIL_module_settings$text <- NULL
+
+
+# for students
+if (AnVIL_module_settings$audience == "student") {
+  
+  # if there is a custom docker image, include this slide
+  if ( !is.null(AnVIL_module_settings$docker_image) ) {
+    AnVIL_module_settings$include <- TRUE
+    AnVIL_module_settings$text <- '1. Under "Application configuration" you will see a dropdown menu.  While this looks like a dropdown menu, you can also enter text yourself.  Copy the following link into the box:'
+  }
+  # otherwise exclude this slide
+  else {
+    AnVIL_module_settings$include <- FALSE
+  }
+}
+```
+
+```{r, echo=FALSE, results='asis', eval=AnVIL_module_settings$include}
+cat(AnVIL_module_settings$text)
+```
+
+    ``r if(AnVIL_module_settings$include){AnVIL_module_settings$docker_image}``
+
+    ```{r, echo=FALSE, eval=AnVIL_module_settings$include}
+     hist(mtcars$cyl)
+    ```
+
+```{r, include=FALSE}
+# settings for instructions about using a custom startup script
+
+# default settings
+AnVIL_module_settings$include <- FALSE
+AnVIL_module_settings$text <- NULL
+
+
+# for students
+if (AnVIL_module_settings$audience == "student") {
+  
+  # if there is a custom docker image, include this slide
+  if ( !is.null(AnVIL_module_settings$startup_script) ) {
+    AnVIL_module_settings$include <- TRUE
+    AnVIL_module_settings$text <- '1. Under "Startup script" you will see textbox.  Copy the following link into the box:'
+  }
+  # otherwise exclude this slide
+  else {
+    AnVIL_module_settings$include <- FALSE
+  }
+}
+```
+
+```{r, echo=FALSE, results='asis', eval=AnVIL_module_settings$include}
+cat(AnVIL_module_settings$text)
+```
+
+    ``r if(AnVIL_module_settings$include){AnVIL_module_settings$startup_script}``
+
+    ```{r, echo=FALSE, eval=AnVIL_module_settings$include}
+     hist(mtcars$cyl)
+    ```
+
+```{r, include=FALSE}
+# settings for instructions to click "Create" from RStudio custom configuration
+
+# default settings
+AnVIL_module_settings$include <- FALSE
+AnVIL_module_settings$text <- NULL
+
+
+# for students
+if (AnVIL_module_settings$audience == "student") {
+  
+  # if there are no custom settings, exclude this slide
+  if (all( is.null(c(AnVIL_module_settings$docker_image,
+                    AnVIL_module_settings$startup_script)) )) {
+    AnVIL_module_settings$include <- FALSE
+  }
+  # if there *are* custom settings, include this slide
+  else {
+    AnVIL_module_settings$include <- TRUE
+    AnVIL_module_settings$text <- '1. Click "CREATE".'
+  }
+}
+```
+
+```{r, echo=FALSE, results='asis', eval=AnVIL_module_settings$include}
+cat(AnVIL_module_settings$text)
+```
+
+    ```{r, echo=FALSE, eval=AnVIL_module_settings$include}
+     hist(mtcars$cyl)
+    ```
+
+1. The dialogue box will close and you will be returned to your Workspace.  You can see the status of your cloud environment by hovering over the RStudio logo.  It will take a few minutes to create your environment.  When your environment is ready, its status will change to “Running”.  Click on the RStudio logo to open a new dialogue box that will let you launch RStudio.
+
+
+    ```{r, echo=FALSE, out.width = '100%', fig.alt='Screenshot of Terra drop-down menu.  The "hamburger" button to extend the drop-down menu is highlighted, and the menu item "Workspaces" is highlighted.'}
+ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_95")
+    ```
+
+-----
+
+
 
 1. Scroll down and select RStudio from the Community-Maintained RStudio Environments section. **NOTE**: AnVIL is very versatile and can scale up to use very powerful cloud computers. It's very important that you select a cloud computing environment appropriate to your needs to avoid runaway costs.  If you are uncertain, start with the default settings; it is fairly easy to increase your compute resources later, if needed, but harder to scale down.
 
