--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -35,23 +35,18 @@ billing_project <- "provided by your instructor"
 ## Start RStudio
 
 ```{r, include=FALSE}
-AnVIL_module_audience <- "student"
+AnVIL_module_settings <- list(
+  audience = "student",
+  docker_image = "test docker",
+  startup_script = "test startup script"
+)
+
+# audience: 
+#   "general" provides advice on choosing settings (this is the default)
+#   "student" tells the reader what settings to choose
 ```
 
-```{r, include=FALSE}
-# prevent "object not found" errors
-if (!exists("AnVIL_module_audience")) {
-  AnVIL_module_audience <- NULL
-}
-if (!exists("rstudio_docker_image")) {
-  rstudio_docker_image <- NULL
-}
-if (!exists("rstudio_startup_script")) {
-  rstudio_startup_script <- NULL
-}
-```
-
-`r if( !(AnVIL_module_audience == "student") ) {'Note that, in order to use RStudio, you must have access to a Terra Workspace with permission to compute (i.e. you must be a "Writer" or "Owner" of the Workspace).'}`
+`r if( !(AnVIL_module_settings$audience == "student") ) {'Note that, in order to use RStudio, you must have access to a Terra Workspace with permission to compute (i.e. you must be a "Writer" or "Owner" of the Workspace).'}`
 
 1. Open Terra - use a web browser to go to [`anvil.terra.bio`](https://anvil.terra.bio/)
 
@@ -81,18 +76,6 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcH
 ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_35")
     ```
 -----
-```{r, include=FALSE}
-AnVIL_module_settings <- list(
-  audience = "student",
-  docker_image = "test docker",
-  startup_script = "test startup script"
-)
-
-# audience: 
-#   "general" provides advice on choosing settings (this is the default)
-#   "student" tells the reader what settings to choose
-```
-
 
 1. You will see some details about the cloud environment, and a list of costs because it costs a small amount of money to use cloud computing.
 
