add back learning objectives

--- a/index.Rmd
+++ b/index.Rmd
@@ -34,11 +34,19 @@ This exercise is intended to be used either
 
 1. As a stand-alone "taste of R", to introduce students to the field of data science, give them an idea of what a data scientist's day-to-day work looks like, and help students see it as something they could do.
 
-2. As an entry point for a more in-depth course or workshop.  In this case we recommend following up on important topics using additional resources (such as [R for Data Science](https://r4ds.had.co.nz/)).  The `swirl` lessons are great for letting students work through the basics in a "real" R environment where they get immediate feedback, but they are hard for students to refer back to later.  We find swirl most useful for giving students a first look at the big ideas, along with practice typing commands into the console.  This sets them up well for a more in-depth treatment over the subsequent course/workshop sessions.
+2. As an entry point for a more in-depth course or workshop.  In this case we recommend following up on important topics using additional resources (such as [R for Data Science](https://r4ds.had.co.nz/)).  The `swirl` lessons are great for letting students work through the basics in a "real" R environment where they get immediate feedback, but they are hard for students to refer back to later.  We find `swirl` most useful for giving students a first look at the big ideas, along with practice typing commands into the console.  This sets them up well for a more in-depth treatment over the subsequent course/workshop sessions.
 
 The `swirl` lessons cover several additional R commands and concepts beyond those mentioned in the learning objectives and provide a useful starting point for going deeper if you desire.  Additional `swirl` lessons can be found at the [swirl Course Network](http://swirlstats.com/scn/).
 
-## Learning Goals {-}
+## Learning Objectives
+
+- Open RStudio and locate important panels (R console, Help)
+- Run commands in the R console
+- Explain what vectors and dataframes are in R
+- Use common commands to manipulate R objects (e.g. assigning, printing, subsetting, mathematical operations)
+- Carry out a basic exploration of rectangular data using R commands (e.g. `dim`, `summary`, `str`)
+
+## Core Concepts and Competencies {-}
 
 This activity addresses the following core concepts and competencies, as described by the associated societies and working groups:
 
@@ -52,6 +60,9 @@ Core Competencies:
 **Bioinformatics** (NIBLSE)
 
 - competency 1
+
+
+
 
 ## Audience and Context {-}
 
@@ -91,6 +102,7 @@ Core Competencies:
 
 - One class period
 
+<!--
 
 Course Level
 o	Introductory
@@ -181,7 +193,6 @@ o	Other
 Bloom’s Cognitive Level (based on learning objectives & assessments)
 o	Foundational: factual knowledge & comprehension
 o	Application & Analysis
-o	Synthesis/Evaluation/Creation
 
 Principles of how people learn 
 o	Motivates student to learn material
@@ -190,6 +201,8 @@ o	Develops supportive community of learners
 o	Leverages differences among learners
 o	Reveals prior knowledge
 o	Requires student to do the bulk of the work
+
+-->
 
 <!-- Learning objectives for this activity come from the [Genetics Core Competencies](https://genetics-gsa.org/education/genetics-learning-framework/): -->
 
