--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -12,10 +12,10 @@ Welcome!  This lab will introduce you to some basic data analysis using the [R p
 ## Set up Account
 
 ```{r, echo = FALSE, results='asis'}
-# cow::borrow_chapter(
-#   doc_path = "child/_child_student_create_account.Rmd",
-#   repo_name = "jhudsl/AnVIL_Template"
-# )
+cow::borrow_chapter(
+  doc_path = "child/_child_student_create_account.Rmd",
+  repo_name = "jhudsl/AnVIL_Template"
+)
 ```
 
 ## Access Materials
@@ -25,11 +25,11 @@ Welcome!  This lab will introduce you to some basic data analysis using the [R p
 #workspace_link <- "http://example.com/"
 billing_project <- "provided by your instructor"
 
-# cow::borrow_chapter(
-#   doc_path = "child/_child_student_workspace_clone.Rmd",
-#   branch = "student-clone",
-#   repo_name = "jhudsl/AnVIL_Template"
-# )
+cow::borrow_chapter(
+  doc_path = "child/_child_student_workspace_clone.Rmd",
+  branch = "student-clone",
+  repo_name = "jhudsl/AnVIL_Template"
+)
 ```
 
 ## Start RStudio
@@ -37,243 +37,15 @@ billing_project <- "provided by your instructor"
 ```{r, include=FALSE}
 AnVIL_module_settings <- list(
   audience = "student",
-  docker_image = "test docker",
-  startup_script = "test startup script"
+#   docker_image = "example docker image link",
+  startup_script = "ask your instructor"
 )
-
-# audience: 
-#   "general" provides advice on choosing settings (this is the default)
-#   "student" tells the reader what settings to choose
+cow::borrow_chapter(
+  doc_path = "child/_child_rstudio_launch.Rmd",
+  repo_name = "jhudsl/AnVIL_Template"
+)
 ```
 
-`r if( !(AnVIL_module_settings$audience == "student") ) {'Note that, in order to use RStudio, you must have access to a Terra Workspace with permission to compute (i.e. you must be a "Writer" or "Owner" of the Workspace).'}`
-
-1. Open Terra - use a web browser to go to [`anvil.terra.bio`](https://anvil.terra.bio/)
-
-1. In the drop-down menu on the left, navigate to "Workspaces". Click the triple bar in the top left corner to access the menu. Click "Workspaces".
-
-    ```{r, echo=FALSE, out.width = '100%', fig.alt='Screenshot of Terra drop-down menu.  The "hamburger" button to extend the drop-down menu is highlighted, and the menu item "Workspaces" is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g117989bd49c_0_150")
-    ```
-
-1. Click on the name of your Workspace. You should be routed to a link that looks like: `https://anvil.terra.bio/#workspaces/<billing-project>/<workspace-name>`.
-
-1. Click on the cloud icon on the far right to access your Cloud Environment options.
-
-    ```{r, echo=FALSE, out.width = '100%', fig.alt='Screenshot of a Terra Workspace. The cloud icon to create a new cloud environment is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_22")
-    ```
-
-1. In the dialogue box, click the "Settings" button under RStudio
-
-    ```{r, echo=FALSE, out.width = '100%', fig.alt='Screenshot of the Cloud Environment Details dialogue box. The Settings button under RStudio is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_18")
-    ```
-
-1. You will see some details about the default RStudio cloud environment, and a list of costs because it costs a small amount of money to use cloud computing.
-
-    ```{r, echo=FALSE, out.width = '100%', fig.alt='Screenshot of the RStudio Cloud Environment dialogue box. The cost to run the environment is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_35")
-    ```
-
-```{r, include=FALSE}
-# settings for instructions about using the default RStudio configuration
-
-# default settings
-AnVIL_module_settings$include <- TRUE
-AnVIL_module_settings$text <- '1. If you are uncertain about what you need, the default configuration is a reasonable, cost-conservative choice.  It is fairly easy to increase your compute resources later, if needed, but harder to scale down. Click the “Create” button.'
-
-
-# for students
-if (AnVIL_module_settings$audience == "student") {
-  
-  # if there are no custom settings, include this slide
-  if (all( is.null(c(AnVIL_module_settings$docker_image,
-                    AnVIL_module_settings$startup_script)) )) {
-    AnVIL_module_settings$include <- TRUE
-    AnVIL_module_settings$text <- '1. Click the "CREATE" button.'
-  }
-  # if there *are* custom settings, then exclude this slide
-  else {
-    AnVIL_module_settings$include <- FALSE
-  }
-}
-```
-
-```{r, echo=FALSE, results='asis', eval=AnVIL_module_settings$include}
-cat(AnVIL_module_settings$text)
-```
-
-    ```{r, echo=FALSE, out.width = '100%', eval=AnVIL_module_settings$include, fig.alt='Screenshot of the RStudio Cloud Environment dialogue box. The "CREATE" button is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_41")
-    ```
-
-```{r, include=FALSE}
-# settings for instructions about opening the RStudio custom configuration menu
-
-# default settings
-AnVIL_module_settings$include <- TRUE
-AnVIL_module_settings$text <- '1. Otherwise, click “CUSTOMIZE” to modify the environment for your needs.'
-
-
-# for students
-if (AnVIL_module_settings$audience == "student") {
-  
-  # if there are no custom settings, exclude this slide
-  if (all( is.null(c(AnVIL_module_settings$docker_image,
-                    AnVIL_module_settings$startup_script)) )) {
-    AnVIL_module_settings$include <- FALSE
-  }
-  # if there *are* custom settings, include this slide
-  else {
-    AnVIL_module_settings$include <- TRUE
-    AnVIL_module_settings$text <- '1. Click "CUSTOMIZE" to adjust the settings for your environment.'
-  }
-}
-```
-
-```{r, echo=FALSE, results='asis', eval=AnVIL_module_settings$include}
-cat(AnVIL_module_settings$text)
-```
-
-    ```{r, echo=FALSE, out.width = '100%', eval=AnVIL_module_settings$include, fig.alt='Screenshot of the RStudio Cloud Environment dialogue box. The "CUSTOMIZE" button is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_48")
-    ```
-
-```{r, include=FALSE}
-# settings for instructions about using a custom docker image
-
-# default settings
-AnVIL_module_settings$include <- FALSE
-AnVIL_module_settings$text <- NULL
-
-
-# for students
-if (AnVIL_module_settings$audience == "student") {
-  
-  # if there is a custom docker image, include this slide
-  if ( !is.null(AnVIL_module_settings$docker_image) ) {
-    AnVIL_module_settings$include <- TRUE
-    AnVIL_module_settings$text <- '1. Under "Application configuration" you will see a dropdown menu.  You can also enter text here.  Copy the following link into the box:'
-  }
-  # otherwise exclude this slide
-  else {
-    AnVIL_module_settings$include <- FALSE
-  }
-}
-```
-
-```{r, echo=FALSE, results='asis', eval=AnVIL_module_settings$include}
-cat(AnVIL_module_settings$text)
-```
-
-    ``r if(AnVIL_module_settings$include){AnVIL_module_settings$docker_image}``
-
-    ```{r, echo=FALSE, out.width = '100%', eval=AnVIL_module_settings$include, fig.alt='Screenshot of the RStudio Cloud Environment customization dialogue box. The dropdown menu labeled "Application configuration" is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_65")
-    ```
-
-```{r, include=FALSE}
-# settings for instructions about using a custom startup script
-
-# default settings
-AnVIL_module_settings$include <- FALSE
-AnVIL_module_settings$text <- NULL
-
-
-# for students
-if (AnVIL_module_settings$audience == "student") {
-  
-  # if there is a custom docker image, include this slide
-  if ( !is.null(AnVIL_module_settings$startup_script) ) {
-    AnVIL_module_settings$include <- TRUE
-    AnVIL_module_settings$text <- '1. Under "Startup script" you will see textbox.  Copy the following link into the box:'
-  }
-  # otherwise exclude this slide
-  else {
-    AnVIL_module_settings$include <- FALSE
-  }
-}
-```
-
-```{r, echo=FALSE, results='asis', eval=AnVIL_module_settings$include}
-cat(AnVIL_module_settings$text)
-```
-
-    ``r if(AnVIL_module_settings$include){AnVIL_module_settings$startup_script}``
-
-    ```{r, echo=FALSE, out.width = '100%', eval=AnVIL_module_settings$include, fig.alt='Screenshot of the RStudio Cloud Environment customization dialogue box. The textbox labeled "Startup script" is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_78")
-    ```
-
-```{r, include=FALSE}
-# settings for instructions to click "Create" from RStudio custom configuration
-
-# default settings
-AnVIL_module_settings$include <- FALSE
-AnVIL_module_settings$text <- NULL
-
-
-# for students
-if (AnVIL_module_settings$audience == "student") {
-  
-  # if there are no custom settings, exclude this slide
-  if (all( is.null(c(AnVIL_module_settings$docker_image,
-                    AnVIL_module_settings$startup_script)) )) {
-    AnVIL_module_settings$include <- FALSE
-  }
-  # if there *are* custom settings, include this slide
-  else {
-    AnVIL_module_settings$include <- TRUE
-    AnVIL_module_settings$text <- '1. Leave everything else as-is. To create your RStudio Cloud Environment, click on the “CREATE” button.'
-  }
-}
-```
-
-```{r, echo=FALSE, results='asis', eval=AnVIL_module_settings$include}
-cat(AnVIL_module_settings$text)
-```
-
-    ```{r, echo=FALSE, out.width = '100%', eval=AnVIL_module_settings$include, fig.alt='Screenshot of the RStudio Cloud Environment customization dialogue box. The "CREATE" button is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_84")
-    ```
-
-1. The dialogue box will close and you will be returned to your Workspace.  You can see the status of your cloud environment by hovering over the RStudio logo.  It will take a few minutes for Terra to request computers and install software.
-
-    ```{r, echo=FALSE, out.width = '100%', fig.alt='Screenshot of a Terra Workspace. The hovertext for the RStudio icon is highlighted, and indicates that the status of the environment is "Creating".'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_91")
-    ```
-
-1. When your environment is ready, its status will change to “Running”.  Click on the RStudio logo to open a new dialogue box that will let you launch RStudio.
-
-    ```{r, echo=FALSE, out.width = '100%', fig.alt='Screenshot of a Terra Workspace. The hovertext for the RStudio icon is highlighted, and indicates that the status of the environment is "Running".'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_95")
-    ```
-    
-1. Click the launch icon to open RStudio.  This is also where you can pause, modify, or delete your environment when needed.
-
-    ```{r, echo=FALSE, out.width = '100%', fig.alt='Screenshot of the RStudio Environment Details dialogue box. The "Open" button is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_99")
-    ```
-
-1. You should now see the RStudio interface with information about the version printed to the console.
-
-    ```{r, echo=FALSE, out.width = '100%', fig.alt='Screenshot of the RStudio environment interface.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1a35Mb8f0M-bQkBcHa1cyQc6YxXoBLtExCz96nv08vkA/edit#slide=id.g14ea2db115d_0_103")
-    ```
-
-
------
-
-1. Scroll down and select RStudio from the Community-Maintained RStudio Environments section. **NOTE**: AnVIL is very versatile and can scale up to use very powerful cloud computers. It's very important that you select a cloud computing environment appropriate to your needs to avoid runaway costs.  If you are uncertain, start with the default settings; it is fairly easy to increase your compute resources later, if needed, but harder to scale down.
-
-# Working in RStudio {#rstudio}
-
-Once you have created a Workspace, you can create an RStudio cloud environment. This will allow you to interface with data and perform genomics-based analyses with add on packages from the Bioconductor community.
-
-## Launch RStudio Cloud Environment
-
-1. Scroll down and select RStudio from the Community-Maintained RStudio Environments section. **NOTE**: AnVIL is very versatile and can scale up to use very powerful cloud computers. It's very important that you select the cloud computing environment described here to avoid runaway costs.
 
 -----
 
@@ -288,6 +60,8 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1ioYY0n3CcrP934WR
     ```{r, echo=FALSE, fig.alt='Screenshot of a Terra Workspace.  The "Dashboard" is highlighted.'}
 ottrpal::include_slide("https://docs.google.com/presentation/d/1ioYY0n3CcrP934WRKEsQ1aKocPqfswdWWHxYCf76BCg/edit#slide=id.g10f3888d99c_0_170")
     ```
+
+Once you have created a Workspace, you can create an RStudio cloud environment. This will allow you to interface with data and perform genomics-based analyses with add on packages from the Bioconductor community.
 
 # Introduction
 
