--- a/index.Rmd
+++ b/index.Rmd
@@ -46,16 +46,16 @@ _Programming skills_
 
 This activity addresses the following core concepts and competencies, as described by the associated societies and working groups:
 
-**[Vision and Change in Undergraduate Biology Education](https://visionandchange.org/)**
+### [Vision and Change in Undergraduate Biology Education](https://visionandchange.org/) {-}
 
 Core Competencies:
 
 - Ability to use quantitative reasoning
 - Ability to tap into the interdisciplinary nature of science
 
-**Bioinformatics** (NIBLSE)
+### [Bioinformatics core competencies for undergraduate life sciences education](https://doi.org/10.1371/journal.pone.0196878) ([NIBLSE](https://qubeshub.org/community/groups/niblse)) {-}
 
-- competency 1
+- Use command-line bioinformatics tools and write simple computer scripts
 
 ## GDSCN Collection {-}
 
